--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ button.action {
     <button class="gov-btn">🚨 1930 HELPLINE</button>
 
     <!-- Government Portal -->
-    <button class="gov-btn" style="background:#1e3a8a;" onclick="window.open('https://cybercrime.gov.in', '_blank')">GOVT PORTAL</button>
+    <button class="gov-btn" style="background:#1e3a8a;" onclick="window.open('https://cybercrime.gov.in', '_blank')">Report online</button>
 </div>
 
 
@@ -490,3 +490,4 @@ function checkPwd() {
 
 </body>
 </html>
+
