Update index.html with new content and styles
changed the title of the project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cyber Hub AI – Kidpreneur Cybersecurity Platform</title>
+<title>Cyber Hub -deal with cyber</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -490,5 +490,6 @@ function checkPwd() {
 
 </body>
 </html>
+
 
 
